Applications/aws/applications/middleware/service.yml
apiVersion: v1
kind: Service
metadata:
  name: middleware
  namespace: neof-aws
  labels:
    app: middleware
    app.kubernetes.io/name: middleware
    app.kubernetes.io/part-of: neof-aws
spec:
  type: ClusterIP
  selector:
    app: middleware
  ports:
    - name: http
      port: 8090
      targetPort: http
      protocol: TCP
