Applications/aws/applications/middleware/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neof-ingress
  namespace: neof-aws
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx-shared
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: middleware
                port:
                  name: http
